--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Curriculo</title>
-</head>
+
 <body>
-    
+    <header>
+        <div class = "perfil"> 
+            <img src="images/images.jfif" alt="">
+           
+        </div>
+    </header>
 </body>
 </html>
